--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "typescript": "^5.0.3"
   }
 }
