--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc && nodemon dist/index.js"
+    "dev": "npx tsc && nodemon dist/index.js",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "cloudinary": "^1.35.0",
